# mr-io

./: .gitignore  CMakeLists.txt  README.md
include/: mrfile.h  mrlock.h  mrsocket.h  mrstream.h
lib/: CMakeLists.txt  mrfile.cpp  mrlock.cpp  mrsocket.cpp  mrstream.cpp
test/: CMakeLists.txt  mrfile_test.cpp  mrlock_test.cpp
